[tool.poetry]
name = "currency-change"
version = "0.1.0"
description = ""
authors = ["pandeakshat <akshat.pande@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
